adding random word implementation

--- a/start.ipynb
+++ b/start.ipynb
@@ -2,34 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salet\n",
+      "10100\n",
+      "---------\n",
+      "isles\n",
+      "01101\n",
+      "---------\n",
+      "older\n",
+      "02000\n",
+      "---------\n",
+      "least\n",
+      "10020\n",
+      "---------\n",
+      "alist\n",
+      "02020\n",
+      "---------\n",
+      "stern\n",
+      "10000\n",
+      "---------\n",
+      "The word was flush. Your dumbass could not guess it.\n"
+     ]
+    }
+   ],
    "source": [
     "#WORDLE clone\n",
-    "#Variable lenth if wordle\n",
-    "LENGTH = 5\n",
+    "#Variable length if wordle\n",
     "\n",
+    "import json\n",
+    "import random\n",
+    "with open(\"wordle_list.json\", \"r\") as wordle_list:\n",
+    "    word_list = json.load(wordle_list)\n",
+    "word_length = 5\n",
+    "max_guesses = 6\n",
     "\n",
     "def get_guess_from_user():\n",
     "    valid = False\n",
     "    while not valid:\n",
     "        guess = input(\"Enter valid guess\")\n",
-    "        if len(guess) == LENGTH: #Add check for valid word in vocabulary\n",
+    "        if len(guess) == word_length: #Add check for valid word in vocabulary\n",
     "            return guess\n",
     "        else:\n",
-    "            print(\"Your word needs to be 5 characters long. Please try again.\")\n",
+    "            print(\"Your word needs to be\", word_length, \" characters long. Please try again.\")\n",
     "\n",
     "def get_guess_from_ai():\n",
     "    return \"ai_word\"\n",
     "\n",
-    "secret_word = \"magic\"\n",
+    "secret_word = random.choice(word_list)\n",
+    "data_list = [letter for letter in secret_word]\n",
     "chars_word = [*secret_word]\n",
     "solved = False\n",
     "num_guesses = 0\n",
     "\n",
-    "while(not solved and num_guesses < 6):\n",
-    "    guess = get_guess_from_ai()\n",
+    "while(not solved and num_guesses < max_guesses):\n",
+    "    guess = get_guess_from_user()\n",
     "    result = \"\"\n",
     "\n",
     "    if guess == secret_word:\n",
@@ -69,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
