--- a/start.ipynb
+++ b/start.ipynb
@@ -2,32 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "salet\n",
-      "10100\n",
+      "[[-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1]]\n",
+      "crane\n",
+      "00202\n",
+      "Score:  4\n",
       "---------\n",
-      "isles\n",
-      "01101\n",
+      "['crane', [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1]]\n",
+      "['00202', [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1]]\n",
+      "bores\n",
+      "00011\n",
+      "Score:  2\n",
       "---------\n",
-      "older\n",
-      "02000\n",
+      "toils\n",
+      "00001\n",
+      "Score:  1\n",
       "---------\n",
-      "least\n",
-      "10020\n",
+      "['crane', 'bores', 'toils', [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1]]\n",
+      "['00202', '00011', '00001', [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1], [-1, -1, -1, -1, -1]]\n",
+      "stirs\n",
+      "20001\n",
+      "Score:  3\n",
       "---------\n",
-      "alist\n",
-      "02020\n",
+      "sharp\n",
+      "20201\n",
+      "Score:  5\n",
       "---------\n",
-      "stern\n",
-      "10000\n",
+      "['crane', 'bores', 'toils', 'stirs', 'sharp', [-1, -1, -1, -1, -1]]\n",
+      "['00202', '00011', '00001', '20001', '20201', [-1, -1, -1, -1, -1]]\n",
+      "sores\n",
+      "20011\n",
+      "Score:  4\n",
       "---------\n",
-      "The word was flush. Your dumbass could not guess it.\n"
+      "The word was spake. Your dumbass could not guess it.\n"
      ]
     }
    ],
@@ -51,6 +64,12 @@
     "        else:\n",
     "            print(\"Your word needs to be\", word_length, \" characters long. Please try again.\")\n",
     "\n",
+    "def get_guess_from_computer(state_board, state_result):\n",
+    "    # for word in word_list:\n",
+    "    print(state_board)\n",
+    "    print(state_result)\n",
+    "    return random.choice(word_list)\n",
+    "\n",
     "def get_guess_from_ai():\n",
     "    return \"ai_word\"\n",
     "\n",
@@ -59,27 +78,48 @@
     "chars_word = [*secret_word]\n",
     "solved = False\n",
     "num_guesses = 0\n",
+    "turn = True\n",
+    "state_board = [[-1, -1, -1, -1, -1]] * 6\n",
+    "state_result = [[-1, -1, -1, -1, -1]] * 6\n",
+    "state_alphabet = [-1] * 26\n",
+    "print(state_board)\n",
     "\n",
     "while(not solved and num_guesses < max_guesses):\n",
-    "    guess = get_guess_from_user()\n",
+    "    if turn == True:\n",
+    "        guess = get_guess_from_user()\n",
+    "    else:\n",
+    "        guess = get_guess_from_computer(state_board, state_result)\n",
     "    result = \"\"\n",
-    "\n",
+    "    result_arr = []\n",
+    "    score = 0\n",
     "    if guess == secret_word:\n",
     "        solved = True\n",
     "        print(\"You got it!\")\n",
     "\n",
     "    for i in range(len(secret_word)):\n",
     "        if guess[i] == secret_word[i]:\n",
+    "            result_arr.append(2)\n",
     "            result += \"2\"\n",
+    "            score += 2\n",
     "        elif guess[i] in chars_word:\n",
+    "            result_arr.append(1)\n",
     "            result += \"1\"\n",
+    "            score += 1\n",
     "        else:\n",
+    "            result_arr.append(0)\n",
     "            result += \"0\"\n",
+    "            score += 0\n",
+    "\n",
+    "    state_board[num_guesses] = guess\n",
+    "    state_result[num_guesses] = result\n",
     "\n",
     "    print(guess)\n",
     "    print(result)\n",
+    "    print(\"Score: \",  score)\n",
+    "\n",
     "    print(\"---------\")\n",
     "    num_guesses += 1\n",
+    "    turn = not turn\n",
     "if not solved:\n",
     "    print(f\"The word was {secret_word}. Your dumbass could not guess it.\")"
    ]
@@ -101,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
